// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config should handle backend and frontend configs 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "airbnb/base",
    "plugin:prettier/recommended",
    "prettier",
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": Object {
    "ecmaVersion": 2018,
    "sourceType": "module",
  },
  "plugins": Array [
    "@typescript-eslint",
  ],
  "rules": Object {
    "@typescript-eslint/ban-ts-ignore": 0,
    "@typescript-eslint/no-empty-function": Array [
      "error",
    ],
    "@typescript-eslint/no-shadow": Array [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": Array [
      "error",
    ],
    "@typescript-eslint/no-use-before-define": 2,
    "import/extensions": 0,
    "import/order": Array [
      "error",
      Object {
        "alphabetize": Object {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": Array [
          "builtin",
          "external",
          "internal",
        ],
        "newlines-between": "always",
        "pathGroups": Array [
          Object {
            "group": "internal",
            "pattern": "@boilerz/**",
            "position": "after",
          },
        ],
        "pathGroupsExcludedImportTypes": Array [
          "builtin",
        ],
      },
    ],
    "no-empty-function": "off",
    "no-shadow": "off",
    "no-unused-vars": "off",
    "no-use-before-define": "off",
  },
  "settings": Object {
    "import/resolver": Object {
      "node": Object {
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
      },
      "typescript": Object {},
    },
  },
}
`;

exports[`config should handle backend and frontend configs 2`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "airbnb",
    "plugin:prettier/recommended",
    "prettier",
    "prettier",
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": Object {
    "ecmaVersion": 2018,
    "sourceType": "module",
  },
  "plugins": Array [
    "@typescript-eslint",
  ],
  "rules": Object {
    "@typescript-eslint/ban-ts-ignore": 0,
    "@typescript-eslint/no-empty-function": Array [
      "error",
    ],
    "@typescript-eslint/no-shadow": Array [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": Array [
      "error",
    ],
    "@typescript-eslint/no-use-before-define": 2,
    "import/extensions": 0,
    "import/order": Array [
      "error",
      Object {
        "alphabetize": Object {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": Array [
          "builtin",
          "external",
          "internal",
        ],
        "newlines-between": "always",
        "pathGroups": Array [
          Object {
            "group": "internal",
            "pattern": "@boilerz/**",
            "position": "after",
          },
        ],
        "pathGroupsExcludedImportTypes": Array [
          "builtin",
        ],
      },
    ],
    "no-empty-function": "off",
    "no-shadow": "off",
    "no-unused-vars": "off",
    "no-use-before-define": "off",
    "react/jsx-filename-extension": 0,
  },
  "settings": Object {
    "import/resolver": Object {
      "node": Object {
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
      },
      "typescript": Object {},
    },
  },
}
`;
